--- a/GitHubOAuth/Info.plist
+++ b/GitHubOAuth/Info.plist
@@ -25,7 +25,7 @@
 			<string>Editor</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>gitHubOAuthLab-12345</string>
+				<string>lloyd1nSpaceOAuthLab-12345</string>
 			</array>
 		</dict>
 	</array>
